css/index-styles.css
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
@import url('https://fonts.googleapis.com/css?family=Roboto');

/*******************************
Basic Styles
*******************************/
body {
	margin: 0;
	background-color: #0e304c;
	font-family: 'Roboto', sans-serif;
}
header {
	background-color: white;
	border-bottom: 7px solid #56c4cf;
	display: block;
}
footer {
	background-color: white;
	border-top: 7px solid #56c4cf;
	display: block;
}
h1 {
	font-family: 'Roboto Slab', serif;
}
/*******************************
Layout
*******************************/
header .container, footer .container {
	margin: 0 auto;
	width: 95%;
	max-width: 1200px;
}
.center .container {
	margin: 0 auto;
	width: 95%;
	max-width: 800px;
}
.static {
	position: fixed;
	left: 0;
	width: 100%;
}
header.static { top: 0; }
footer.static { bottom: 0; }
header .container, footer .container { 
	display: flex;
	justify-content: space-between;
	align-items: center;
}

/*******************************
Primary (Top Left)
******************************/
.subtitle {
	margin-bottom: 20px;
}
/*******************************
Strong Fallow Area (Top Right)
******************************/
form.strong-fallow {
	display: flex;
}
form.strong-fallow label {
	display: block;
	margin-bottom: 5px;
}
form.strong-fallow div {
	padding-right: 30px;
} 
form.strong-fallow #login {
	background-color: white;
	border-radius: 5px;
	border-color: #3b878f;
	color: #3b878f;
}
form.strong-fallow #login:hover {
	background-color: #e8e8e8;
}
/*******************************
Center
******************************/

.center .container {
	color: white;
	display: flex; 
	justify-content: space-between;
	align-items: center;
	text-align: center;
	min-height: 90vh;
	background-image: url("../images/z-pattern.png");
	background-repeat: no-repeat;
	background-position: right;
	background-size: auto 50%;
}
.center .container div{
	float: right;
}

/*******************************
Weak Fallow Area (Bottom Left)
******************************/
ul.weak-fallow {
	list-style-type: none;
	display: flex;
	flex-wrap: wrap;
} 
ul.weak-fallow li {
	padding: 0 30px 10px 30px;
	max-width: 225px;
	text-align: center;
}
ul.weak-fallow div {
	color: #3b878f;
	margin: 15px;
	font-size: 20px;
}
ul.weak-fallow li:nth-of-type(1), ul.weak-fallow li:nth-of-type(2) {
	border-right: 1px solid #c1c1c1;
}

/*******************************
Terminal Area (Bottom Right)
******************************/
.terminal {
	height: 100%;
	margin: 0 auto;
}
.terminal a {
	text-decoration: none;
	background: #56c4cf;
	padding: 20px;
	border-radius: 5px;
	color: white;
	font-weight: 500;
	letter-spacing: 1px;
	border: 1px solid black;
}
.terminal a:hover {
	background: #3b878f;
}


/*Project 5 additions*/

#login {
	margin: 0 0 0 0;
}
#login a {
  float: right;  
}

